# audioio

./: CMakeLists.txt  README.md
cmake/: ftxui.cmake  init.cmake  nanosigslot.cmake  portaudio.cmake  spdlog.cmake
src/: App.cpp  App.h  AudioManager.hpp  CMakeLists.txt  PortAudioManager.hpp  RingBuffer.hpp  Tui.hpp  main.cpp
